# booking-plugin

./: .crails  CMakeLists.txt  prebuild.sh
app/: database.cpp  renderers.cpp  routes.cpp
app/controllers/: controller.cpp  controller.hpp
app/controllers/admin/: controller.cpp  controller.hpp
app/models/: bookable_event.cpp  bookable_event.hpp  bookable_event_index_view.hpp  event_booking.cpp  event_booking.hpp
app/views/admin/booking/: index.html  show.html
app/views/booking/: date_block.html  form.html  index.html  show.html
